--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,5 @@ spring.jpa.hibernate.ddl-auto=none
 spring.datasource.url=jdbc:mysql://localhost:3306/voting_app
 spring.datasource.username=app_user
 spring.datasource.password=app_user
+
+server.error.whitelabel.enabled=false
