--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.jpa.hibernate.ddl-auto=none
-spring.datasource.url=jdbc:mysql://localhost:3306/voting_app
+spring.datasource.url=jdbc:mysql://localhost:3306/voting_app?serverTimezone=UTC
 spring.datasource.username=app_user
 spring.datasource.password=app_user
 
