--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     </parent>
     <groupId>com.pc</groupId>
     <artifactId>voting-app-api</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>1.0.0</version>
     <name>voting-app-api</name>
     <description>Voting app REST API</description>
     <packaging>war</packaging>
